Enable group selecting.

--- a/src/app/protected/cranix/hwconfs/details/members/hwconf-members.page.html
+++ b/src/app/protected/cranix/hwconfs/details/members/hwconf-members.page.html
@@ -59,6 +59,7 @@
       [defaultColDef]="defaultColDef"
       [rowData]="memberData"
       [autoGroupColumnDef]="autoGroupColumnDef"
+      [groupSelectsChildren]="true"
       [animateRows]="true"
       [deltaColumnMode]="true"
       id="memberTable"
