--- a/src/app/protected/cranix/mygroups/mygroups.page.html
+++ b/src/app/protected/cranix/mygroups/mygroups.page.html
@@ -55,6 +55,7 @@
         [context]="context"
         [rowData]="rowData"
         [autoGroupColumnDef]="autoGroupColumnDef"
+        [groupSelectsChildren]="true"
         [columnDefs]="columnDefs"
         [defaultColDef]="defaultColDef"
         (gridReady)="onGridReady($event)">
