Optimize imports. Implementing DynDns management. Now the instute can be set for a ticket whithout institute. Notice for institute can be removed.

--- a/src/app/protected/cephalix/institutes/details/synced-objects/institute-synced-objects.component.html
+++ b/src/app/protected/cephalix/institutes/details/synced-objects/institute-synced-objects.component.html
@@ -1,11 +1,11 @@
 <cranix-toolbar></cranix-toolbar>
-<ion-row class="header-row">
-  <ion-col>
-    <ion-title>{{ 'List of synchronized objects in the selected institute:' | translate}} {{institute.name}}
-    </ion-title>
-  </ion-col>
-</ion-row>
-<ion-content (window:resize)="onResize($event)">
+<ion-content id="carded">
+  <ion-row class="header-row">
+    <ion-col>
+      <ion-title>{{ 'List of synchronized objects in the selected institute:' | translate}} {{institute.name}}
+      </ion-title>
+    </ion-col>
+  </ion-row>
   <ion-card>
     <ion-card-header>
       <ion-toolbar>
