--- a/src/app/protected/cephalix/tickets/details/details.page.html
+++ b/src/app/protected/cephalix/tickets/details/details.page.html
@@ -10,9 +10,20 @@
           </ion-button>
         </ion-buttons>
       </ion-toolbar>
-      <ion-card-subtitle> {{ticket.recDate | date:'yy-MM-dd HH:mm'}} {{ institute.name }} {{ institute.regCode }}
+      <ion-card-subtitle *ngIf="institute.id != 0"> {{ticket.recDate | date:'yy-MM-dd HH:mm'}} {{ institute.name }}
+        {{ institute.regCode }}
         {{ institute.ipVPN }}<br>
         {{ticket.email}}: {{ticket.lastname}},{{ticket.firstname}}</ion-card-subtitle>
+      <ion-card-subtitle *ngIf="institute.id == 0"> {{ticket.recDate | date:'yy-MM-dd HH:mm'}}
+        <input placeholder="{{'Select institute:'|translate}}" list="insts" name="institute" id="institute">
+        <datalist id="insts">
+          <option *ngFor="let i of institutes" [value]="i.label">
+        </datalist>
+        <ion-button (click)="setInstitute()">
+          <ion-icon slot="icon-only" color="success" name="checkmark-sharp"></ion-icon>
+        </ion-button><br>
+        {{ticket.email}}: {{ticket.lastname}},{{ticket.firstname}}
+      </ion-card-subtitle>
     </ion-card-header>
   </ion-card>
   <ion-card *ngFor="let article of articles">
@@ -45,6 +56,6 @@
     </ion-card-header>
     <ion-card-content>
       <pre>{{article.text}}</pre>
-    </ion-card-content>   
+    </ion-card-content>
   </ion-card>
 </ion-content>
