--- a/src/app/protected/cephalix/institutes/details/edit/institute-edit.component.html
+++ b/src/app/protected/cephalix/institutes/details/edit/institute-edit.component.html
@@ -1,118 +1,107 @@
-<ion-header>
-  <ion-toolbar>
-    <ion-title>edit</ion-title>
-  </ion-toolbar>
-</ion-header>
-<ion-content id="carded">
-  <ion-row class="header-row">
-    <ion-col>
+<form #editForm="ngForm">
+  <cranix-toolbar></cranix-toolbar>
+  <ion-header>
+    <ion-toolbar>
       <ion-title>{{ 'Modify selected institute:' | translate}} "{{object.name}}"</ion-title>
-    </ion-col>
-  </ion-row>
-  <ion-card>
-    <form #editForm="ngForm">
-      <ion-card-header>
-        <ion-toolbar>
-          <ion-card-title>{{ 'Modify selected institute:' | translate}} "{{object.name}}"</ion-card-title>
-          <ion-buttons slot="end">
-            <ion-button size="small" fill="solid" fill="clear" class="ion-no-margin" [disabled]="!editForm.valid"
-              matTooltip="{{'Apply changes' | translate }}" (click)="onSubmit(editForm.value)">
-              <ion-icon slot="icon-only" color="success" name="checkmark-sharp"></ion-icon>
-            </ion-button>
-            <ion-button size="small" fill="solid" fill="clear" (click)="setNextDefaults()"
-              matTooltip="{{'Set the next default values' | translate }}">
-              <ion-icon slot="icon-only" name="refresh"></ion-icon>
-            </ion-button>
-            <ion-button size="small" fill="solid" fill="clear" (click)="writeConfig()"
-              matTooltip="{{'Write configuration and create installation image' | translate }}">
-              <ion-icon slot="icon-only" name="server"></ion-icon>
-            </ion-button>
-            <ion-button size="small" fill="solid" fill="clear" href="/isos/{{isourl}}.iso"
-              matTooltip="{{'Download the installation image' | translate }}">
-              <ion-icon slot="icon-only" name="arrow-down-circle"></ion-icon>
-            </ion-button>
-            <ion-button size="small" fill="solid" fill="clear" href="/configs/{{isourl}}full-connect.sh"
-              matTooltip="{{'Download the setup script' | translate }}">
-              <ion-icon slot="icon-only" name="download"></ion-icon>
-            </ion-button>
-            <ion-button size="small" fill="solid" fill="clear" (click)="delete($event)"
-              matTooltip="{{'Delete institute' | translate }}">
-              <ion-icon slot="icon-only" color="danger" name="trash"></ion-icon>
-            </ion-button>
-          </ion-buttons>
-        </ion-toolbar>
-      </ion-card-header>
-      <ion-card-content>
-        <ion-grid>
-          <ion-row>
-            <ion-col size=12 sizeMd=6 sizeLg=4 sizeXl=3 *ngFor="let key of objectKeys;"
-              [ngSwitch]="objectService.typeOf(key,object,'edit')">
-              <ion-item *ngSwitchCase="'booleanTrue'">
-                <ion-label>{{ key | translate }}</ion-label>
-                <ion-toggle slot="start" [(ngModel)]="object[key]" name="{{key}}" color="secondary" checked>
-                </ion-toggle>
-              </ion-item>
-              <ion-item *ngSwitchCase="'booleanFalse'">
-                <ion-label>{{ key | translate }}</ion-label>
-                <ion-toggle slot="start" [(ngModel)]="object[key]" name="{{key}}" color="secondary"></ion-toggle>
-              </ion-item>
-              <ion-item *ngSwitchCase="'string'">
-                <ion-label position="stacked">{{ key | translate }}{{objectService.required[key]}}</ion-label>
-                <ng-template [ngIf]="objectService.selects[key]" [ngIfElse]="elseBlock">
-                  <ion-select type="text" [(ngModel)]="object[key]" name="{{key}}"
-                    [compareWith]="objectService.compareFn" [required]="objectService.required[key]">
-                    <ion-select-option *ngFor="let option of  objectService.selects[key]" value="{{option}}">
-                      {{option | translate}}</ion-select-option>
-                  </ion-select>
-                </ng-template>
-                <ng-template #elseBlock>
-                  <ion-input type="text" [(ngModel)]="object[key]" name="{{key}}" value="{{object[key]}}"
-                    [required]="objectService.required[key]"></ion-input>
-                </ng-template>
-              </ion-item>
-              <ion-item *ngSwitchCase="'stringRO'">
-                <ion-label position="stacked">{{ key | translate }}</ion-label>
-                <ion-input color="tertiary" type="text" [(ngModel)]="object[key]" name="{{key}}" value="{{object[key]}}"
-                  readonly>
-                </ion-input>
-              </ion-item>
-              <ion-item *ngSwitchCase="'text'">
-                <ion-label position="stacked">{{ key | translate }}</ion-label>
-                <ion-textarea color="tertiary" [(ngModel)]="object[key]" name="{{key}}" value="{{object[key]}}">
-                </ion-textarea>
-              </ion-item>
-              <ion-item *ngSwitchCase="'date'">
-                <ion-label position="stacked">{{ key | translate }}</ion-label>
-                <input [(ngModel)]="object[key]" name="{{key}}" type="date">
-              </ion-item>
-              <ion-item *ngSwitchCase="'date-time'">
-                <ion-label position="stacked">{{ key | translate }}</ion-label>
-                <ion-datetime [(ngModel)]="object[key]" name="{{key}}" max="2100"
-                  value="{{object[key] | date:'yyyy-MM-dd HH:mm:ss Z'}}">
-                </ion-datetime>
-              </ion-item>
-              <ion-item *ngSwitchCase="'idPipe'">
-                <ion-label position="stacked">{{ key | translate }}</ion-label>
-                <ion-input color="tertiary" type="text" [(ngModel)]="object[key]" name="{{key}}"
-                  value="{{object[key] | idToName:'customer'}}" readonly>
-                </ion-input>
-              </ion-item>
-            </ion-col>
-            <ion-col>
-              <ion-label position="stacked">{{ 'Institute manager' | translate}}</ion-label>
-              <ion-select
-                multiple="true"
-                [(ngModel)]="managers"
-                [compareWith]="compareFn"
-                name="managers"
-                (ionChange)="managerChanged($event)">
-                <ion-select-option *ngFor="let user of  users" [value]="user">
-                  {{user.fullName}}</ion-select-option>
+      <ion-buttons slot="end">
+        <ion-button size="small" fill="solid" fill="clear" class="ion-no-margin" [disabled]="!editForm.valid"
+          matTooltip="{{'Apply changes' | translate }}" (click)="onSubmit(editForm.value)">
+          <ion-icon slot="icon-only" color="success" name="checkmark-sharp"></ion-icon>
+        </ion-button>
+        <ion-button size="small" fill="solid" fill="clear" (click)="setNextDefaults()"
+          matTooltip="{{'Set the next default values' | translate }}">
+          <ion-icon slot="icon-only" name="refresh"></ion-icon>
+        </ion-button>
+        <ion-button size="small" fill="solid" fill="clear" (click)="writeConfig()"
+          matTooltip="{{'Write configuration and create installation image' | translate }}">
+          <ion-icon slot="icon-only" name="server"></ion-icon>
+        </ion-button>
+        <ion-button size="small" fill="solid" fill="clear" href="/isos/{{isourl}}.iso"
+          matTooltip="{{'Download the installation image' | translate }}">
+          <ion-icon slot="icon-only" name="arrow-down-circle"></ion-icon>
+        </ion-button>
+        <ion-button size="small" fill="solid" fill="clear" href="/configs/{{isourl}}full-connect.sh"
+          matTooltip="{{'Download the setup script' | translate }}">
+          <ion-icon slot="icon-only" name="download"></ion-icon>
+        </ion-button>
+        <ion-button size="small" fill="solid" fill="clear" (click)="delete($event)"
+          matTooltip="{{'Delete institute' | translate }}">
+          <ion-icon slot="icon-only" color="danger" name="trash"></ion-icon>
+        </ion-button>
+      </ion-buttons>
+    </ion-toolbar>
+  </ion-header>
+  <ion-content fullscreen>
+    <ion-grid>
+      <ion-row>
+        <ion-col size=12 sizeMd=6 sizeLg=4 sizeXl=3 *ngFor="let key of objectKeys;"
+          [ngSwitch]="objectService.typeOf(key,object,'edit')">
+          <ion-item *ngSwitchCase="'string'">
+            <ion-label position="stacked">{{ key | translate }}{{objectService.required[key]}}</ion-label>
+            <ng-template [ngIf]="objectService.selects[key]" [ngIfElse]="elseBlock">
+              <ion-select type="text" [(ngModel)]="object[key]" name="{{key}}" [compareWith]="objectService.compareFn"
+                [required]="objectService.required[key]">
+                <ion-select-option *ngFor="let option of  objectService.selects[key]" value="{{option}}">
+                  {{option | translate}}</ion-select-option>
               </ion-select>
-            </ion-col>
-          </ion-row>
-        </ion-grid>
-      </ion-card-content>
-    </form>
-  </ion-card>
-</ion-content>
+            </ng-template>
+            <ng-template #elseBlock>
+              <ion-input type="text" [(ngModel)]="object[key]" name="{{key}}" value="{{object[key]}}"
+                [required]="objectService.required[key]"></ion-input>
+            </ng-template>
+          </ion-item>
+          <ion-item *ngSwitchCase="'stringRO'">
+            <ion-label position="stacked">{{ key | translate }}</ion-label>
+            <ion-input color="tertiary" type="text" [(ngModel)]="object[key]" name="{{key}}" value="{{object[key]}}"
+              readonly>
+            </ion-input>
+          </ion-item>
+          <ion-item *ngSwitchCase="'date'">
+            <ion-label position="stacked">{{ key | translate }}</ion-label>
+            <input [(ngModel)]="object[key]" name="{{key}}" type="date">
+          </ion-item>
+        </ion-col>
+        <ion-col size=12 sizeMd=6 sizeLg=4 sizeXl=3>
+          <ion-item>
+            <ion-label position="stacked">{{ 'Institute manager' | translate}}</ion-label>
+            <ion-select multiple="true" [(ngModel)]="managers" [compareWith]="compareFn" name="managers"
+              (ionChange)="managerChanged($event)" selectedText="{{ 'There are manager defined' | translate }}">
+              <ion-select-option *ngFor="let user of  users" [value]="user">
+                {{user.fullName}}</ion-select-option>
+            </ion-select>
+          </ion-item>
+        </ion-col>
+        <ion-col *ngIf="authService.isAllowed('customer.manage')" size=12 sizeMd=6 sizeLg=4 sizeXl=3>
+          <ion-list style="background-color: aqua;">
+            <ion-list-header>
+              <ion-label>{{ 'Institute dyndns' | translate}}</ion-label>
+            </ion-list-header>
+            <ion-item>
+              <ion-label position="stacked">{{ 'Actuall IP' | translate}}</ion-label>
+              <ion-input type="text" [(ngModel)]="dynDnsIp" name="dynDnsIp" readonly></ion-input>
+            </ion-item>
+            <ion-item>
+              <ion-label position="stacked">{{ 'Name' | translate}}</ion-label>
+              <ion-input type="text" [(ngModel)]="dynDnsName" name="dynDnsName"></ion-input>
+            </ion-item>
+            <ion-item>
+              <ion-label position="stacked">{{ 'Domain' | translate}}</ion-label>
+              <ion-select [(ngModel)]="dynDnsDomain" [compareWith]="objectService.compareFn" name="dynDnsDomain">
+                <ion-select-option *ngFor="let domain of dynDnsDomains" [value]="domain">
+                  {{domain}}</ion-select-option>
+              </ion-select>
+            </ion-item>
+            <ion-item>
+              <ion-label position="stacked">{{ 'Port' | translate}}</ion-label>
+              <ion-input type="text" [(ngModel)]="dynDnsPort" name="dynDnsPort"></ion-input>
+            </ion-item>
+            <ion-item>
+              <ion-label position="stacked">{{ 'Must not change' | translate}}</ion-label>
+              <ion-checkbox [(ngModel)]="dynDnsRo" name="dynDnsRo"></ion-checkbox>
+            </ion-item>
+          </ion-list>
+        </ion-col>
+      </ion-row>
+    </ion-grid>
+  </ion-content>
+</form>
