--- a/src/app/protected/cephalix/institutes/details/notices/institute-notices.component.html
+++ b/src/app/protected/cephalix/institutes/details/notices/institute-notices.component.html
@@ -1,26 +1,32 @@
-<ion-header>
-  <ion-toolbar>
-    <ion-title>edit</ion-title>
-  </ion-toolbar>
-</ion-header>
-<ion-row class="header-row">
-  <ion-col size="9">
-    <ion-title>{{ 'Notices to the selected institute' | translate}}: "{{object.name}}"</ion-title>
-  </ion-col>
-  <ion-col size="1">
-  </ion-col>
-  <ion-col size="2">
-    <ion-button size="small" (click)="redirectToAdd($event)" matTooltip="{{'Create a new ticket' | translate }}">
-      <ion-icon name="add-circle"></ion-icon>
-    </ion-button>
-  </ion-col>
-</ion-row>
+<cranix-toolbar></cranix-toolbar>
 <ion-content>
+  <ion-card>
+    <ion-card-header>
+      <ion-toolbar>
+        <ion-card-title>
+          {{ 'Notices to the selected institute' | translate}}: "{{object.name}}"
+        </ion-card-title>
+        <ion-buttons slot="end">
+          <ion-button size="small" (click)="redirectToAdd($event)" matTooltip="{{'Create a new notice' | translate }}">
+            <ion-icon name="add-circle"></ion-icon>
+          </ion-button>
+        </ion-buttons>
+      </ion-toolbar>
+    </ion-card-header>
+  </ion-card>
   <ion-card *ngFor="let notice of notices">
     <ion-card-header>
-      <ion-card-title>{{notice.noticeType}}: "{{notice.title}}"</ion-card-title>
-      <ion-card-subtitle> {{ 'created' | translate }} {{ notice.created | date:'yy-MM-dd HH:mm' }} {{ 'reminder' | translate}} {{ notice.reminder | date:'yy-MM-dd HH:mm' }}
-      </ion-card-subtitle>
+      <ion-toolbar>
+        <ion-card-title>{{notice.noticeType}}: "{{notice.title}}"</ion-card-title>
+        <ion-card-subtitle> {{ 'created' | translate }} {{ notice.created | date:'yy-MM-dd HH:mm' }}
+          {{ 'reminder' | translate}} {{ notice.reminder | date:'yy-MM-dd HH:mm' }}
+        </ion-card-subtitle>
+        <ion-buttons slot="end">
+          <ion-button size="small" (click)="redirectToDelete(notice)" matTooltip="{{'Delete the notice' | translate }}">
+            <ion-icon name="trash"></ion-icon>
+          </ion-button>
+        </ion-buttons>
+      </ion-toolbar>
     </ion-card-header>
     <ion-card-content>
       <a href="#" class="item-icon-right"><i class="icon ion-minus"></i></a>
