--- a/src/global.scss
+++ b/src/global.scss
@@ -41,6 +41,18 @@
 @import "theme/cranix-custom.scss";
 @import "theme/fonts.css";
 
+/*
+* ngx-quill settings
+*/
+@import '~quill/dist/quill.core.css';
+@import '~quill/dist/quill.bubble.css';
+@import '~quill/dist/quill.snow.css';
+
+[contenteditable] {
+  -webkit-user-select: text;
+  user-select: text;
+}
+
 @media only screen and (min-width: 768px) and (min-height: 768px) {
   .modal-wrapper {
     --height: 85%;
