--- a/src/app/protected/cephalix/tickets/tickets.page.html
+++ b/src/app/protected/cephalix/tickets/tickets.page.html
@@ -14,7 +14,7 @@
         <ion-icon name="ellipsis-vertical-sharp" (click)="openActions($event,null)"></ion-icon>
       </ion-fab-button>
       <ion-fab-button>
-        <ion-icon name="add-circle" (click)="redirectToEdit($event,null)"></ion-icon>
+        <ion-icon name="add-circle" (click)="redirectToEdit(null,null)"></ion-icon>
       </ion-fab-button>
       <ion-fab-button>
         <ion-icon name="apps" (click)="openCollums($event)"></ion-icon>
@@ -33,7 +33,7 @@
             </ion-input>
           </ion-item>
         <ion-buttons slot="end">
-          <ion-button size="small" fill="solid" (click)="redirectToEdit($event,null)"
+          <ion-button size="small" fill="solid" (click)="redirectToEdit(null,null)"
             matTooltip="{{'Create a new ticket' | translate }}">
             <ion-icon slot="icon-only" name="add-circle"></ion-icon>
           </ion-button>
