--- a/src/app/shared/actions/files-upload/files-upload.component.html
+++ b/src/app/shared/actions/files-upload/files-upload.component.html
@@ -23,7 +23,7 @@
                 {{file.name}}
               </div>
             </div>
-            <input type="file" (change)="onFilesAdded($event.target.files)" multiple />
+            <input type="file" (change)="onFilesAdded($event)" multiple />
           </button>
         </div>
       </ion-item>
