--- a/src/app/protected/cranix/informations/informations.component.html
+++ b/src/app/protected/cranix/informations/informations.component.html
@@ -8,6 +8,10 @@
             <ion-label class="hidden-xs hidden-sm">{{'Announcements' | translate}}</ion-label>
             <ion-icon name="newspaper"></ion-icon>
           </ion-segment-button>
+          <ion-segment-button value="task" layout="icon-start">
+            <ion-label class="hidden-xs hidden-sm">{{'Tasks' | translate}}</ion-label>
+            <ion-icon name="clipboard"></ion-icon>
+          </ion-segment-button>
           <ion-segment-button value="faq" layout="icon-start">
             <ion-label class="hidden-xs hidden-sm">{{'FAQs' | translate}}</ion-label>
             <ion-icon name="information-circle"></ion-icon>
@@ -26,7 +30,7 @@
           </ion-input>
         </ion-item>
         <ion-buttons slot="end" *ngIf="authService.isAllowed('information.add')">
-          <ion-button *ngIf="owned" size="small" (click)="addInfo()"
+          <ion-button *ngIf="owned" size="small" (click)="addEditInfo(0)"
             matTooltip="{{'Create a new '+segment | translate }}">
             <ion-icon slot="icon-only" name="add-circle"></ion-icon>
           </ion-button>
@@ -58,10 +62,19 @@
         {{informationsService.getCategoryName(categorId)}}
       </ion-list-header>
       <ion-item *ngFor="let info of infos[categorId]">
-        <ion-label>
-          <h2>{{info.title}}</h2>
-          <h3>{{info.issue}}</h3>
+        <ion-label *ngIf="segment == 'contact'">
+          <h2>{{info.title}} {{info.issue}}</h2>
+          <h3>{{info.name}} {{info.phone}} {{info.email}}</h3>
         </ion-label>
+        <ion-toolbar *ngIf="segment != 'contact'">
+          <h2>{{info.title}}</h2>
+          <h3>{{info.abstract}}</h3>
+          <ion-buttons slot="end">
+            <ion-button size="small" (click)="addEditInfo(info.id)">
+              <ion-icon slot="icon-only" name="book"></ion-icon>
+            </ion-button>
+          </ion-buttons>
+        </ion-toolbar>
       </ion-item>
     </div>
   </ion-list>
