--- a/src/app/protected/cranix/system/acls/manage-acls/manage-acls.component.html
+++ b/src/app/protected/cranix/system/acls/manage-acls/manage-acls.component.html
@@ -17,9 +17,9 @@
         <ion-list>
           <ion-item *ngFor="let acl of acls">
             {{acl.acl}}
-            <ion-buttom slot="end" (click)=removeAcl(acl)>
+            <ion-button slot="end" (click)=removeAcl(acl)>
               <ion-icon slot="icon-only" name="trash" color="danger"></ion-icon>
-            </ion-buttom>
+            </ion-button>
           </ion-item>
         </ion-list>
       </ion-col>
@@ -28,9 +28,9 @@
         <ion-list>
           <ion-item *ngFor="let newAcl of availabeAcls">
             {{newAcl.acl}}
-            <ion-buttom slot="end" (click)=addAcl(newAcl)>
+            <ion-button slot="end" (click)=addAcl(newAcl)>
               <ion-icon slot="icon-only" name="add-circle" color="success"></ion-icon>
-            </ion-buttom>
+            </ion-button>
           </ion-item>
         </ion-list>
       </ion-col>
