--- a/src/app/protected/cranix/mygroups/mygroups.page.html
+++ b/src/app/protected/cranix/mygroups/mygroups.page.html
@@ -23,8 +23,9 @@
           </ion-input>
         </ion-item>
         <ion-buttons slot="end">
-          <ion-button *ngIf="segment == 'group'" size="small" fill="solid" (click)="redirectToEdit($event,null)"
-            matTooltip="{{'Create a new group' | translate }}">
+          <ion-button *ngIf="segment == 'group' || (segment == 'group' && authService.isAllowed('user.add.students'))"
+            size="small" fill="solid" (click)="redirectToEdit($event,null)"
+            matTooltip="{{'Create a new ' + segment | translate }}">
             <ion-icon slot="icon-only" name="add-circle"></ion-icon>
           </ion-button>
           <ion-button *ngIf="segment == 'guest'" size="small" fill="solid" (click)="addEditGuest(null)"
