--- a/src/app/shared/objects-edit/objects-edit.component.html
+++ b/src/app/shared/objects-edit/objects-edit.component.html
@@ -47,8 +47,13 @@
             *ngIf="editForm.controls[key] && editForm.controls[key].hasError('required')  && editForm.controls[key].touched">
             {{ 'This field is required!' | translate }}</ion-label>
           <ng-template [ngIf]="objectService.selects[key]" [ngIfElse]="elseBlock">
-            <ion-select type="text" [(ngModel)]="object[key]" name="{{key}}" [compareWith]="objectService.compareFn"
-              [required]="objectService.required[key]">
+            <ion-select 
+              type="text" 
+              [(ngModel)]="object[key]"
+              name="{{key}}"
+              [compareWith]="objectService.compareFn"
+              [required]="objectService.required[key]"
+              [disabled]="key == 'role' && fixedRole">
               <ion-select-option *ngFor="let option of  objectService.selects[key]" value="{{option}}">
                 {{option | translate}}</ion-select-option>
             </ion-select>
@@ -96,8 +101,7 @@
             </ion-select>
           </ng-template>
           <ng-template #elseBlock>
-            <ion-input type="text" [(ngModel)]="object[key]" name="{{key}}"
-              value="{{object[key] | idToName:objectService.idToPipe(key) }}" [required]="objectService.required[key]">
+            <ion-input readonly type="text" [value]="objectService.idToName(key,object[key])" [required]="objectService.required[key]">
             </ion-input>
           </ng-template>
         </ion-item>
